# OWASPWebScanner

./: .gitignore  README.md  ferramenta.py  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  development.md  getting_started.md  index.md  modules.md  operations.md  troubleshooting.md
scripts/: run_spider.py
src/: orchestrator.py
src/Recon/: __init__.py  web_crawler.py
src/modules/: http_server.py  server_ouvinte.py  sql_injection.py  xss.py
src/modules/AccessAnalyzer/: __init__.py  login_access.py  url_scan.py
src/modules/Auth/: authentication.py
src/modules/CallbackServer/: __init__.py  xss_http_server.py
src/modules/SqlInjectionScanner/: __init__.py  sql_injection.py
src/modules/XssScanner/: __init__.py  scanner.py  xss.py  xss_scanner.py
src/modules/broken_access_control/: login_access.py  url_list.txt  url_scan.py
src/modules/broken_acess_control/: login_acess.py  url_list.txt  url_scan.py
src/modules/server/: __init__.py  xss_http_server.py
src/modules/sql_injection/: __init__.py  network_analisis.py  network_analisys.py  sql_injection.py
src/modules/xss/: __init__.py  field_tester.py  payload_builder.py  scanner.py  (+1 more)
src/owasp_scanner/: __init__.py  cli.py
src/recon/: spider.py  web_crawler.py
test/: run_access_analyzer_test.py  test_access_analyzer.py  test_sql_injection.py  xss_test.py
tests/: __init__.py
tests/helpers/: owasp_imports.py  pytest_import.py
tests/unit/: test_access_analyzer.py  test_config.py  test_crawler.py  test_dalfox_runner.py  test_dependencies.py  test_report.py  test_sql_runner.py  test_utils.py  test_xssstrike_runner.py
(+35 files in other folders)
