[project]
name = "owaspwebscanner"
version = "0.1.0"
description = "A comprehensive OWASP web vulnerability scanner for detecting XSS, SQL Injection, Broken Access Control, and more using automated tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4", 
    "playwright",
    "scrapy",
    "scrapy-playwright",
    "pyngrok",
    "python-dotenv"
]

[project.scripts]
owasp-web-scanner = "owasp_scanner.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "sphinx",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"owasp_scanner.resources" = ["*.txt"]

[tool.ruff]
# Define o tamanho máximo de uma linha de código
line-length = 90

[tool.ruff.lint]
# Seleciona quais grupos de regras o Ruff deve aplicar.
select = ["E", "F", "I"]
